# workspace

.vscode_default_template/: CMakeLists.txt
.vscode_default_template/config/: Build.cmake  arm-linux-gnueabihf-toolchain.cmake  qt6-arm-linux-gnueabihf-toolchain.cmake
.vscode_default_template/script/: CMakeBuild.ps1  CMakeBuild.sh  CMakeBuild_msys2.sh
Qt/RaspiExplore/: CMakeLists.txt  National_Anthem_of_PRC.song  UtilsLibrary  happybirthdayV2.song  七里香.song
Qt/RaspiExplore/code/: CMakeLists.txt
Qt/RaspiExplore/code/Core/: CMakeLists.txt  Main.cpp  RegGpioFunctions.cpp
Qt/RaspiExplore/code/Core/GpioFunctions/: CMakeLists.txt  GpioFunction.cpp  GpioFunction.h  GpioGetFunction.cpp  GpioGetFunction.h  GpioMonitorFunction.cpp  GpioMonitorFunction.h  GpioPeriodSetFunction.cpp  GpioPeriodSetFunction.h  GpioSetFunction.cpp  GpioSetFunction.h  GpioSingFunction.cpp  GpioSingFunction.h
Qt/RaspiExplore/code/Core/TerminalCtrlFunction/: CMakeLists.txt  TerminalCtrlFunction.cpp  TerminalCtrlFunction.h
Qt/RaspiExplore/code/Gui/: CMakeLists.txt  ExploreRaspiAppGui.qrc  ExploreRaspiAppGui.ui  ExploreRaspiAppGuiWidget.cpp  ExploreRaspiAppGuiWidget.h  GpioGetFunctionWidget.cpp  GpioGetFunctionWidget.h  GpioMonitorFunctionWidget.cpp  GpioMonitorFunctionWidget.h  GpioPeriodSetFunctionWidget.cpp  GpioPeriodSetFunctionWidget.h  GpioSetFunctionWidget.cpp  GpioSetFunctionWidget.h  GpioSingFunctionWidget.cpp  GpioSingFunctionWidget.h  GuiMain.cpp  PinVolLvlConfigWidget.cpp  PinVolLvlConfigWidget.h  PinVolLvlPeriodConfigWidget.cpp  PinVolLvlPeriodConfigWidget.h  RaspiGpioPinBtnConfigGuiManager.cpp  RaspiGpioPinBtnConfigGuiManager.h  RaspiGpioPinBtnPeriodConfigGuiManager.cpp  RaspiGpioPinBtnPeriodConfigGuiManager.h  RaspiGpioPinBtnSelectGuiManager.cpp  RaspiGpioPinBtnSelectGuiManager.h  RegGpioFunctions.cpp
Qt/RaspiExplore/config/: Build.cmake  Custom.cmake
Qt/RaspiExplore/include/AutoInitRuntimeObject/: AutoInitRuntimeObject.h
Qt/RaspiExplore/include/GpioConfig/: GpioPeriodConfig.h  GpioToneConfig.h
Qt/RaspiExplore/include/GpioDrvWrapper/: GpioDrvWrapper.h
Qt/RaspiExplore/include/MessageCenter/: MessageCenter.h
Qt/RaspiExplore/include/NumMscNotationParser/: NumMscNotationParser.h
Qt/RaspiExplore/include/ParseConfig/: ParseConfig.h
Qt/RaspiExplore/include/SmallTools/: StringAlign.h  TimeTool.h
Qt/RaspiExplore/tests/: CMakeLists.txt  FakeGpioDrv.h  RegGpioFunctions.cpp  StdMoveHelperClass.cpp  StdMoveHelperClass.h  TestAlmostEqual.cpp  TestGpioDrvWrapper.cpp  TestGpioSingFunction.cpp  TestGpioToneConfig.cpp  TestMscAlphabet.cpp  TestNumMscNotationParser.cpp  TestParseConfig.cpp  TestRaspiExploreFunctions.cpp  TestShellCommand.cpp  TestStdMove.cpp  TestStringAlign.cpp  Testlibgpiod.cpp
UtilsLibrary/: CMakeLists.txt  config  script
UtilsLibrary/code/: CMakeLists.txt
UtilsLibrary/code/AutoInitRuntimeObject/: AutoInitRuntimeObject.cpp  CMakeLists.txt
UtilsLibrary/code/AutoRegFactory/: AutoRegFactory.h  CMakeLists.txt
UtilsLibrary/code/GpioConfig/: CMakeLists.txt  GpioConfig.cpp  GpioConfig.h  GpioPeriodConfig.cpp  GpioToneConfig.cpp
UtilsLibrary/code/GpioDrvWrapper/: CMakeLists.txt  GpioDrvWrapperGpiod.cpp  GpioDrvWrapperGpiod.h  GpioDrvWrapperWiringPi.cpp  GpioDrvWrapperWiringPi.h
UtilsLibrary/code/MessageCenter/: CMakeLists.txt  MessageCenter.cpp
UtilsLibrary/code/NumMscNotationParser/: CMakeLists.txt  MscAlphabet.cpp  MscAlphabet.h  NumMscNotationParser.cpp  TuneFrequncyConst.h
UtilsLibrary/code/ParseConfig/: CMakeLists.txt  ParseConfig.cpp
UtilsLibrary/code/SmallTools/: AlmostEqual.h  CMakeLists.txt  HelperDefine.h  ShellCommand.h
UtilsLibrary/code/TerminalCtrl/: CMakeLists.txt  TerminalCtrl.cpp  TerminalCtrl.h
